--- a/WpfApp_classwork_271117_image_convert/MainWindow.xaml
+++ b/WpfApp_classwork_271117_image_convert/MainWindow.xaml
@@ -1,13 +1,10 @@
-﻿<Window x:Class="WpfApp_classwork_271117_image_convert.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp_classwork_271117_image_convert"
-        mc:Ignorable="d"
+﻿<Controls:MetroWindow x:Class="WpfApp_classwork_271117_image_convert.MainWindow"
+         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="277,142,0,0" VerticalAlignment="Top" Width="75"/>
-
+        <Button Content="Button" HorizontalAlignment="Left" Margin="201,158,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
